--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -35,8 +35,8 @@ jobs:
           uses: docker/build-push-action@v2
           with:
             push: true
-            context: ./foodgram/
-            tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:0.6
+            context: .backend/foodgram/
+            tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
 
   deploy:
       runs-on: ubuntu-latest
