--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -35,7 +35,7 @@ jobs:
           uses: docker/build-push-action@v2
           with:
             push: true
-            context: .backend/foodgram/
+            context: ./backend/foodgram/
             tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
 
   deploy:
