--- a/foodgram_workflow.yml
+++ b/foodgram_workflow.yml
@@ -16,10 +16,7 @@ jobs:
       run: | 
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        pip install -r api_yamdb/requirements.txt 
-    - name: Test with flake8 and django tests
-      run: |
-        python -m flake8
+        pip install -r backend/foodgram/requirements.txt 
   build_and_push_to_docker_hub:
       name: Push Docker image to Docker Hub
       runs-on: ubuntu-latest
@@ -38,7 +35,7 @@ jobs:
           uses: docker/build-push-action@v2
           with:
             push: true
-            context: ./foodgram/
+            context: ./backend/foodgram/
             tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
 
   deploy:
