--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,11 +1,6 @@
 version: '3.3'
 
 services:
-  frontend:
-    image: isturnell/foodgram:v0.6
-    volumes:
-      - ../frontend/:/app/result_build/
-
   db:
     image: postgres:13.0-alpine
     volumes:
@@ -13,7 +8,7 @@ services:
     env_file:
       - ./.env
 
-  web:
+  backend:
     image: isturnell/foodgram:v0.6
     restart: always
     volumes:
@@ -24,18 +19,27 @@ services:
     env_file:
       - ./.env
 
+  frontend:
+    image: isturnell/foodgram_frontend:v1.0
+    volumes:
+      - ../frontend/build:/app/result_build/build
+    depends_on:
+      - backend
+    env_file:
+      - ./.env
+
   nginx:
     image: nginx:1.21.3-alpine
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ../frontend/build:/usr/share/nginx/html/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
-      - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
-      - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
+      - ../docs/:/usr/share/nginx/html/api/docs/
     depends_on:
-      - web
+      - frontend
 
 volumes:
   static_value:
