--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,7 +2,12 @@ server {
     listen 80;
     server_tokens off;
 
-    location /static/ {
+    location /static/admin/ {
+        autoindex on;
+        root /var/html/;
+    }
+
+    location /static/rest-framework/{
         root /var/html/;
     }
 
@@ -11,11 +16,33 @@ server {
         try_files $uri $uri/redoc.html;
     }
 
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+        proxy_pass http://backend:8000;
+    }
+
     location /media/ {
         root /var/html/;
     }
 
-    location / {
-        proxy_pass http://web:8000;
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
     }
+
+    location / {
+    root /usr/share/nginx/html;
+    index  index.html index.htm;
+    try_files $uri /index.html;
+    proxy_set_header        Host $host;
+    proxy_set_header        X-Real-IP $remote_addr;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header        X-Forwarded-Proto $scheme;
+  }
+  error_page   500 502 503 504  /50x.html;
+  location = /50x.html {
+    root   /var/html/frontend/;
+  }
 }
